syntax = "proto3";
import public "global_options.proto";

option go_package="./;proto";
option java_package = "org.liquibase.grpc.proto";
option java_multiple_files = true;
option java_outer_classname = "ChecksRunProto";

package liquibase.pro;

service ChecksRunService {
  rpc execute(Checks.RunRequest) returns (Response) {}
}

/* Check the changelog or database for issues */
message Checks {
  message RunRequest {
    optional string auto_update = 1; // Allows automatic backup and updating of liquibase.checks.conf file when new quality checks are available, or for file format changes. Options: [on|off]
    optional bool cache_changelog_file_contents = 2; // If true, sqlFile change type contents will be cached in memory to improve performance, at the cost of higher memory usage. To reduce memory usage, set this to false.
    optional string changelog_file = 3; // Relative or fully qualified path to a Liquibase changelog file.  One of --changelog-file or --url is required.
    optional string changeset_filter = 4; // The changeset filter to use when determining which changesets to run checks against, which can be a comma separated list of the following options: 'all', 'pending'
    optional string check_name = 5; // Comma-separated list of one or more enabled checks to run. Checks to exclude can be prefixed with the ! character. If no checks are specified, all enabled checks will run. Example: --check-name=shortname1,shortname2,!shortname3
    optional bool check_rollbacks = 6; // Allow changeset's rollback code to be analyzed for compliance with currently enabled quality checks.
    optional string checks_output = 7; // Specify which parts of the checks run output should be shown; options: all, issues, issues0, issues1, issues2, issues3, issues4, validated, checksrun, sqlparserfails, skippedchecks
    optional string checks_packages = 8; // If using a checks packages file, optionally specify which packages should be run from the file as a comma separated list.
    optional string checks_scope = 9; // The Liquibase component to run checks against, which can be a comma separated list of the following options: 'changelog', 'database'
    optional string checks_settings_file = 10; // Relative or fully qualified path to a configuration file for checks execution
    optional string context_filter = 11; // Changeset contexts to match
    optional string default_catalog_name = 12; // The default catalog name to use for the database connection
    optional string default_schema_name = 13; // The default schema name to use for the database connection
    optional string driver = 14; // The JDBC driver class
    optional string driver_properties_file = 15; // The JDBC driver properties file
    optional string format = 16; // [PRO] Option to create JSON output
    optional string label_filter = 17; // Changeset labels to match
    optional string password = 18; // Password to use to connect to the database
    optional bool report_enabled = 19; // [PRO] Enable or disable reporting.
    optional string report_name = 20; // [PRO] The name of the report.
    optional string report_path = 21; // [PRO] The path to the directory to generate the report.
    optional string schemas = 22; // The schemas to check when checks-scope contains 'database'
    optional int32 sql_parser_fail_severity = 23; // The severity that a check which fails due to a SQL parse error will exit with. If not set, use the severity of the configured check. Available values are: 0, 1, 2, 3, 4
    optional string url = 24; // The JDBC database connection URL.  One of --changelog-file or --url is required.
    optional string username = 25; // Username to use to connect to the database
    optional bool verbose = 26; // Verbose flag with optional values of 'True' or 'False'. The default is 'False'.
    liquibase.GlobalOptions global_options = 27;
  }
}

message Response {
  string message = 1;
}
